Remove usage of SQL parser in IR tests