@@ -27,6 +27,15 @@ import io.trino.spi.predicate.Domain;
 import io.trino.spi.predicate.TupleDomain;
 import io.trino.spi.security.PrincipalType;
 import io.trino.sql.planner.assertions.BasePushdownPlanTest;
+import io.trino.sql.planner.assertions.PlanMatchPattern;
+import io.trino.sql.tree.ArithmeticBinaryExpression;
+import io.trino.sql.tree.Cast;
+import io.trino.sql.tree.ComparisonExpression;
+import io.trino.sql.tree.GenericLiteral;
+import io.trino.sql.tree.LogicalExpression;
+import io.trino.sql.tree.LongLiteral;
+import io.trino.sql.tree.SubscriptExpression;
+import io.trino.sql.tree.SymbolReference;
 import io.trino.testing.PlanTester;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.Test;
@@ -48,12 +57,16 @@ import static io.trino.plugin.deltalake.DeltaLakeQueryRunner.DELTA_CATALOG;
 import static io.trino.spi.type.BigintType.BIGINT;
 import static io.trino.sql.planner.assertions.PlanMatchPattern.any;
 import static io.trino.sql.planner.assertions.PlanMatchPattern.anyTree;
+import static io.trino.sql.planner.assertions.PlanMatchPattern.dataType;
 import static io.trino.sql.planner.assertions.PlanMatchPattern.expression;
 import static io.trino.sql.planner.assertions.PlanMatchPattern.filter;
 import static io.trino.sql.planner.assertions.PlanMatchPattern.join;
 import static io.trino.sql.planner.assertions.PlanMatchPattern.project;
 import static io.trino.sql.planner.assertions.PlanMatchPattern.tableScan;
 import static io.trino.sql.planner.plan.JoinType.INNER;
+import static io.trino.sql.tree.ArithmeticBinaryExpression.Operator.ADD;
+import static io.trino.sql.tree.ComparisonExpression.Operator.EQUAL;
+import static io.trino.sql.tree.LogicalExpression.Operator.AND;
 import static io.trino.testing.TestingNames.randomNameSuffix;
 import static io.trino.testing.TestingSession.testSessionBuilder;
 import static java.lang.String.format;
@@ -129,7 +142,7 @@ public class TestDeltaLakeProjectionPushdownPlans
                 session,
                 any(
                         project(
-                                ImmutableMap.of("expr", expression("col0[1]"), "expr_2", expression("col0[2]")),
+                                ImmutableMap.of("expr", expression(new SubscriptExpression(new SymbolReference("col0"), new io.trino.sql.tree.LongLiteral("1"))), "expr_2", expression(new SubscriptExpression(new SymbolReference("col0"), new io.trino.sql.tree.LongLiteral("2")))),
                                 tableScan(testTable, ImmutableMap.of("col0", "col0")))));
     }
 
@@ -166,36 +179,40 @@ public class TestDeltaLakeProjectionPushdownPlans
                         ImmutableMap.of("col0.x", equalTo(columnX), "col0.y", equalTo(columnY)))));
 
         // Projection and predicate pushdown
+        PlanMatchPattern source2 = tableScan(
+                table -> {
+                    DeltaLakeTableHandle deltaLakeTableHandle = (DeltaLakeTableHandle) table;
+                    TupleDomain<DeltaLakeColumnHandle> unenforcedConstraint = deltaLakeTableHandle.getNonPartitionConstraint();
+                    return deltaLakeTableHandle.getProjectedColumns().orElseThrow().equals(ImmutableSet.of(column1Handle, columnX, columnY)) &&
+                            unenforcedConstraint.equals(TupleDomain.withColumnDomains(ImmutableMap.of(columnY, Domain.singleValue(BIGINT, 2L))));
+                },
+                TupleDomain.all(),
+                ImmutableMap.of("y", columnY::equals, "x", columnX::equals, "col1", column1Handle::equals));
         assertPlan(
                 format("SELECT col0.x FROM %s WHERE col0.x = col1 + 3 and col0.y = 2", testTable),
                 anyTree(
                         filter(
-                                "y = BIGINT '2' AND (x =  CAST((col1 + 3) AS BIGINT))",
-                                tableScan(
-                                        table -> {
-                                            DeltaLakeTableHandle deltaLakeTableHandle = (DeltaLakeTableHandle) table;
-                                            TupleDomain<DeltaLakeColumnHandle> unenforcedConstraint = deltaLakeTableHandle.getNonPartitionConstraint();
-                                            return deltaLakeTableHandle.getProjectedColumns().orElseThrow().equals(ImmutableSet.of(column1Handle, columnX, columnY)) &&
-                                                    unenforcedConstraint.equals(TupleDomain.withColumnDomains(ImmutableMap.of(columnY, Domain.singleValue(BIGINT, 2L))));
-                                        },
-                                        TupleDomain.all(),
-                                        ImmutableMap.of("y", columnY::equals, "x", columnX::equals, "col1", column1Handle::equals)))));
+                                new LogicalExpression(AND, ImmutableList.of(
+                                        new ComparisonExpression(EQUAL, new SymbolReference("y"), new GenericLiteral("BIGINT", "2")),
+                                        new ComparisonExpression(EQUAL, new SymbolReference("x"), new Cast(new ArithmeticBinaryExpression(ADD, new SymbolReference("col1"), new LongLiteral("3")), dataType("bigint"))))),
+                                source2)));
 
         // Projection and predicate pushdown with overlapping columns
+        PlanMatchPattern source1 = tableScan(
+                table -> {
+                    DeltaLakeTableHandle deltaLakeTableHandle = (DeltaLakeTableHandle) table;
+                    TupleDomain<DeltaLakeColumnHandle> unenforcedConstraint = deltaLakeTableHandle.getNonPartitionConstraint();
+                    return deltaLakeTableHandle.getProjectedColumns().orElseThrow().equals(ImmutableSet.of(column0Handle, columnX)) &&
+                            unenforcedConstraint.equals(TupleDomain.withColumnDomains(ImmutableMap.of(columnX, Domain.singleValue(BIGINT, 5L))));
+                },
+                TupleDomain.all(),
+                ImmutableMap.of("col0", equalTo(column0Handle), "x", equalTo(columnX)));
         assertPlan(
                 format("SELECT col0, col0.y expr_y FROM %s WHERE col0.x = 5", testTable),
                 anyTree(
                         filter(
-                                "x = BIGINT '5'",
-                                tableScan(
-                                        table -> {
-                                            DeltaLakeTableHandle deltaLakeTableHandle = (DeltaLakeTableHandle) table;
-                                            TupleDomain<DeltaLakeColumnHandle> unenforcedConstraint = deltaLakeTableHandle.getNonPartitionConstraint();
-                                            return deltaLakeTableHandle.getProjectedColumns().orElseThrow().equals(ImmutableSet.of(column0Handle, columnX)) &&
-                                                    unenforcedConstraint.equals(TupleDomain.withColumnDomains(ImmutableMap.of(columnX, Domain.singleValue(BIGINT, 5L))));
-                                        },
-                                        TupleDomain.all(),
-                                        ImmutableMap.of("col0", equalTo(column0Handle), "x", equalTo(columnX))))));
+                                new ComparisonExpression(EQUAL, new SymbolReference("x"), new GenericLiteral("BIGINT", "5")),
+                                source1)));
 
         // Projection and predicate pushdown with joins
         assertPlan(
@@ -203,33 +220,36 @@ public class TestDeltaLakeProjectionPushdownPlans
                 anyTree(
                         project(
                                 ImmutableMap.of(
-                                        "expr_0_x", expression("expr_0[1]"),
-                                        "expr_0", expression("expr_0"),
-                                        "expr_0_y", expression("expr_0[2]")),
-                                join(INNER, builder -> builder
-                                        .equiCriteria("t_expr_1", "s_expr_1")
-                                        .left(
-                                                anyTree(
-                                                        filter(
-                                                                "x = BIGINT '2'",
-                                                                tableScan(
-                                                                        table -> {
-                                                                            DeltaLakeTableHandle deltaLakeTableHandle = (DeltaLakeTableHandle) table;
-                                                                            TupleDomain<DeltaLakeColumnHandle> unenforcedConstraint = deltaLakeTableHandle.getNonPartitionConstraint();
-                                                                            Set<DeltaLakeColumnHandle> expectedProjections = ImmutableSet.of(column0Handle, column1Handle, columnX);
-                                                                            TupleDomain<DeltaLakeColumnHandle> expectedUnenforcedConstraint = TupleDomain.withColumnDomains(
-                                                                                    ImmutableMap.of(columnX, Domain.singleValue(BIGINT, 2L)));
-                                                                            return deltaLakeTableHandle.getProjectedColumns().orElseThrow().equals(expectedProjections) &&
-                                                                                    unenforcedConstraint.equals(expectedUnenforcedConstraint);
-                                                                        },
-                                                                        TupleDomain.all(),
-                                                                        ImmutableMap.of("x", equalTo(columnX), "expr_0", equalTo(column0Handle), "t_expr_1", equalTo(column1Handle))))))
-                                        .right(
-                                                anyTree(
-                                                        tableScan(
-                                                                equalTo(((DeltaLakeTableHandle) tableHandle.get().getConnectorHandle()).withProjectedColumns(Set.of(column1Handle))),
-                                                                TupleDomain.all(),
-                                                                ImmutableMap.of("s_expr_1", equalTo(column1Handle)))))))));
+                                        "expr_0_x", expression(new SubscriptExpression(new SymbolReference("expr_0"), new io.trino.sql.tree.LongLiteral("1"))),
+                                        "expr_0", expression(new SymbolReference("expr_0")),
+                                        "expr_0_y", expression(new SubscriptExpression(new SymbolReference("expr_0"), new io.trino.sql.tree.LongLiteral("2")))),
+                                join(INNER, builder -> {
+                                    PlanMatchPattern source = tableScan(
+                                            table -> {
+                                                DeltaLakeTableHandle deltaLakeTableHandle = (DeltaLakeTableHandle) table;
+                                                TupleDomain<DeltaLakeColumnHandle> unenforcedConstraint = deltaLakeTableHandle.getNonPartitionConstraint();
+                                                Set<DeltaLakeColumnHandle> expectedProjections = ImmutableSet.of(column0Handle, column1Handle, columnX);
+                                                TupleDomain<DeltaLakeColumnHandle> expectedUnenforcedConstraint = TupleDomain.withColumnDomains(
+                                                        ImmutableMap.of(columnX, Domain.singleValue(BIGINT, 2L)));
+                                                return deltaLakeTableHandle.getProjectedColumns().orElseThrow().equals(expectedProjections) &&
+                                                        unenforcedConstraint.equals(expectedUnenforcedConstraint);
+                                            },
+                                            TupleDomain.all(),
+                                            ImmutableMap.of("x", equalTo(columnX), "expr_0", equalTo(column0Handle), "t_expr_1", equalTo(column1Handle)));
+                                    builder
+                                            .equiCriteria("t_expr_1", "s_expr_1")
+                                            .left(
+                                                    anyTree(
+                                                            filter(
+                                                                    new ComparisonExpression(EQUAL, new SymbolReference("x"), new GenericLiteral("BIGINT", "2")),
+                                                                    source)))
+                                            .right(
+                                                    anyTree(
+                                                            tableScan(
+                                                                    equalTo(((DeltaLakeTableHandle) tableHandle.get().getConnectorHandle()).withProjectedColumns(Set.of(column1Handle))),
+                                                                    TupleDomain.all(),
+                                                                    ImmutableMap.of("s_expr_1", equalTo(column1Handle)))));
+                                }))));
     }
 
     private DeltaLakeColumnHandle createProjectedColumnHandle(
